clusters/production/oswald-ai/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oswald-ai
  labels:
    app: oswald-ai
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: oswald-ai
  template:
    metadata:
      labels:
        app: oswald-ai
    spec:
      # Block API token and kernel syscalls
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "Always"
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: oswald-ai
          image: ghcr.io/jonahgcarpenter/oswald-ai/oswald-ai:v4.0.6-beta.0
          imagePullPolicy: Always

          # Enforcing Principle of Least Privilege
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL

          volumeMounts:
            - name: storage-volume
              mountPath: /home/oswald-ai/data/database
              subPath: database
            # /tmp for Gif support
            - name: tmp-dir
              mountPath: /tmp

      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            claimName: oswald-ai-pvc
        - name: tmp-dir
          emptyDir:
            sizeLimit: 256Mi
