clusters/production/oswald-ai/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oswald-ai-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`oswald.home.jonahsserver.com`)
      kind: Rule
      services:
        - name: oswald-ai-service
          namespace: oswald-ai
          port: 8000
  tls:
    secretName: oswald-certificate-secret
